[Home] Fix stretched ladies on mobile and safari flex.

--- a/src/App.css
+++ b/src/App.css
@@ -107,6 +107,10 @@ li a {
     height: 100%;
 }
 
+.navbar {
+    flex: 0 0 auto;
+}
+
 .nav-link {
     margin: 0.5em 0;
     border-bottom: 2px solid #ececec;
@@ -219,9 +223,9 @@ body.modal-open > :not(.modal) {
 }
 
 .ladyImage {
-    width: 100%;
-    max-width: 15em;
-    height: auto;
+    max-width: 100%;
+    max-height: 15em;
+    object-fit: scale-down;
 }
 
 img[alt='apple'] {
